[package]
authors = ["Moritz Ulrich <moritz@tarn-vedra.de>"]
name = "hellschreiber"
version = "0.1.0"

[dependencies]
derive_more = "0.11.0"
failure = "0.1.1"
lazy_static = "1.0.1"
rusqlite = "0.13.0"
serde = "1.0.64"
serde_derive = "1.0.64"
serde_json = "1.0.19"

[dependencies.chrono]
features = ["serde"]
version = "0.4.2"

[dev-dependencies]
rand = "0.5.0"
