[package]
authors = ["Moritz Ulrich <moritz@tarn-vedra.de>"]
name = "hellschreiber"
version = "0.1.0"

[dependencies]
derive_more = "0.11.0"
failure = "0.1.8"
lazy_static = "1.4.0"
rusqlite = "0.13.0"
serde = "1.0.145"
serde_derive = "1.0.145"
serde_json = "1.0.85"

[dependencies.chrono]
features = ["serde"]
version = "0.4.22"

[dev-dependencies]
rand = "0.5.6"
